# simple-ttd-dr-deeresearch

./: .env.example  .gitignore  README.md  pyproject.toml
sample/: sample-report.md
src/ttd_dr/: __init__.py  agents.py  controller.py  evolution.py  main.py  state.py  tools.py
tests/: conftest.py  test_controller_metrics.py  test_evolution.py  test_tools.py
