[project]
name = "strandsagents-video-register"
version = "0.1.0"
dependencies = [
    "strands-agents>=1.1.0",
    "strands-agents-tools>=0.2.2",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
